--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,8 @@ repo: sfkioscom-upptime # The name of this repository
 sites:
   - name: SFKIOS
     url: https://sfkios.com
+  - name: Cloudflare
+    url: https://www.cloudflare.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
